# esp32-bike-computer

./: README.md
block_diagram/: block_diagram.drawio
hardware/bike_computer/: bike_computer.kicad_pro  bike_computer.kicad_sch
hardware/bike_computer/bike_computer_lib/: bike_computer_symbols.kicad_sym
mechanical/models/main_module/bottom_case/: BottomCase.3mf  BottomCase.step
squareline_project/: Themes.slt  bike_computer_ui.sll  bike_computer_ui.slp  bike_computer_ui.spj  bike_computer_ui_events.py  project.info
squareline_project/components/: btn.ecomp
src/android-app/: .gitignore  build.gradle  settings.gradle
src/android-app/app/: build.gradle
src/modules/common/: espnow_packet.hpp
src/modules/main_module/: CMakeLists.txt  sdkconfig.defaults
src/modules/main_module/components/ui/: CMakeLists.txt  filelist.txt  idf_component.yml  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
src/modules/main_module/components/ui/components/: ui_comp.c  ui_comp.h  ui_comp_btn.c  ui_comp_btn.h  ui_comp_hook.c  ui_comp_hook.h
src/modules/main_module/components/ui/screens/: ui_ScreenMaps.c  ui_ScreenMaps.h  ui_ScreenMetrics.c  ui_ScreenMetrics.h  ui_ScreenSettings.c  ui_ScreenSettings.h
src/modules/main_module/main/: CMakeLists.txt  idf_component.yml  main.cpp  utils.cpp  utils.hpp
src/modules/main_module/main/app/: app.cpp  app.hpp  app_settings.hpp  ble_location_service.cpp  ble_location_service.hpp  lvgl_port_wrapper.cpp  lvgl_port_wrapper.hpp  map_renderer.cpp  map_renderer.hpp  persistent_store.cpp  persistent_store.hpp  ride_metrics.cpp  ride_metrics.hpp  ui_callbacks.cpp  ui_presenter.cpp  ui_presenter.hpp
src/modules/main_module/main/constants/: app_config.hpp  board_pins.hpp  hw_config.hpp
src/modules/main_module/main/hardware/: ili9341_display.cpp  ili9341_display.hpp  sd_card.cpp  sd_card.hpp  spi_bus.cpp  spi_bus.hpp  xpt2046_touch.cpp  xpt2046_touch.hpp
src/modules/wheel_module/: .clangd  CMakeLists.txt  sdkconfig.defaults
src/modules/wheel_module/main/: main.cpp  (+3 more)
src/tools/: convert_raster_tiles.py
(+15 files in other folders)
